plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	maven {
		name = "Terraformers"
		url = "https://maven.terraformersmc.com/"
	}
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }
	maven {
		name = "FDD Maven"
		url = "https://maven.firstdark.dev/releases"
	}
	maven {
		name = 'Ladysnake Mods'
		url = 'https://maven.ladysnake.org/releases'
		content {
			includeGroup 'io.github.ladysnake'
			includeGroup 'org.ladysnake'
			includeGroupByRegex 'dev\\.onyxstudios.*'
		}
	}

	ivy {
		name = "libs"
		url = uri("libs")
		patternLayout {
			artifact("[artifact]-[revision](-[classifier]).[ext]")
		}
		metadataSources { artifact() }
	}
}

loom {
    accessWidenerPath = file("src/main/resources/splitself.accesswidener")
	runs {
		client {
			vmArg "-Djava.awt.headless=false"
		}
	}
}

fabricApi {
	configureDataGeneration {
		client = true
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    implementation 'com.google.code.gson:gson:2.10.1'
    include 'com.google.code.gson:gson:2.10.1'

	implementation 'dev.firstdark.discordrpc:discord-rpc:1.0.3'
	include 'dev.firstdark.discordrpc:discord-rpc:1.0.3'

	implementation 'org.java-websocket:Java-WebSocket:1.5.6'
	include 'org.java-websocket:Java-WebSocket:1.5.6'

	modImplementation "local:videolib:1.0.1:all"
//	include "local:videolib:1.0.1:all"

//	modImplementation 'org.xerial:sqlite-jdbc:3.53.2.1'
//	include 'org.xerial:sqlite-jdbc:3.53.2.1'

	modImplementation "org.ladysnake:satin:${satin_version}"
	include "org.ladysnake:satin:${satin_version}"

    modImplementation "maven.modrinth:architectury-api:${project.architectury_version}+fabric"
    modImplementation "maven.modrinth:shriek:${project.shriek_version}+fabric"

    modImplementation "com.terraformersmc:modmenu:${project.mod_menu_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

remapJar {
	nestedJars.from(file("libs/videolib-1.0.1-all.jar"))
	addNestedDependencies = true
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}

	manifest {
		attributes(
			'Main-Class': 'com.pryzmm.Main'
		)
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	repositories {}
}